--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/JoeHart/new-game/issues"
   },
-  "homepage": "https://github.com/JoeHart/new-game#readme"
+  "homepage": "https://github.com/JoeHart/new-game#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^2.2.0"
+  }
 }
