--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,7 @@ dist/
 /new-game-unity/[Ll]ogs/
 /new-game-unity/[Mm]emoryCaptures/
 /new-game-unity/[Aa]ssets/SocketIO/
+/new-game-unity/[Aa]ssets/PitchTest/LowMan/
 
 # Never ignore Asset meta data
 !/new-game-unity/[Aa]ssets/**/*.meta
