--- a/controls/package.json
+++ b/controls/package.json
@@ -1,19 +1,22 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html",
-    "start": "parcel build index.html && http-server dist"
+    "start": "parcel build index.html && http-server dist",
+    "serve": "parcel build index.html && node server.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "http-server": "^0.11.1",
-    "parcel": "^1.12.4",
+    "parcel": "^2.9.3",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
-    "cssnano": "^4.1.10"
+    "buffer": "^6.0.3",
+    "cssnano": "^4.1.10",
+    "process": "^0.11.10"
   }
 }
