--- a/controls/package.json
+++ b/controls/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "http-server": "^0.11.1",
     "parcel": "^2.9.3",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "buffer": "^6.0.3",
