--- a/controls/package.json
+++ b/controls/package.json
@@ -6,7 +6,7 @@
     "dev": "parcel index.html",
     "build": "parcel build index.html",
     "start": "parcel build index.html && http-server dist",
-    "serve": "parcel build index.html && node server.js"
+    "serve": "rm -rf .parcel-cache||true && parcel build index.html &&  node server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
